# Task-Management-System

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: background.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: tasks.py
tests/: conftest.py  test_tasks.py
